{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 19,
  "lineage": "47bbae38-cca0-966b-ee02-2d5e016dba2d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "internal_domain_name_suffix": "d5pbsw225raudbboyn0ce1ap4a.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "cicdprojectnetwork",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/virtualNetworks/cicidproject-network/subnets/internal"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-22-48-A4-0E-2E",
            "name": "jenkins-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "adriano-christmann-rg",
            "virtual_machine_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Compute/virtualMachines/jenkins-vm"
          },
          "dependencies": [
            "azurerm_public_ip.jenkins_public_ip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkInterfaces/webserver-nic",
            "internal_domain_name_suffix": "d5pbsw225raudbboyn0ce1ap4a.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "cicdprojectnetwork",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/publicIPAddresses/webserver-public-ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/virtualNetworks/cicidproject-network/subnets/internal"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-22-48-A0-01-4E",
            "name": "webserver-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "adriano-christmann-rg",
            "virtual_machine_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Compute/virtualMachines/webserver-vm"
          },
          "dependencies": [
            "azurerm_public_ip.webserver_public_ip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jenkinsnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkInterfaces/jenkins-nic|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.jenkins",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.jenkins_public_ip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "webservernsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkInterfaces/webserver-nic|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkInterfaces/webserver-nic",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.webserver",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.webserver_public_ip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg",
            "location": "northeurope",
            "name": "cicdproject-nsg",
            "resource_group_name": "adriano-christmann-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allout",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sshd",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg/securityRules/allout",
            "name": "allout",
            "network_security_group_name": "cicdproject-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "adriano-christmann-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sshd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg/securityRules/sshd",
            "name": "sshd",
            "network_security_group_name": "cicdproject-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "adriano-christmann-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg/securityRules/web",
            "name": "web",
            "network_security_group_name": "cicdproject-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "adriano-christmann-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.72.252",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "jenkins-public-ip",
            "resource_group_name": "adriano-christmann-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "webserver_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/publicIPAddresses/webserver-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.166.67.203",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "webserver-public-ip",
            "resource_group_name": "adriano-christmann-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/virtualNetworks/cicidproject-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adriano-christmann-rg",
            "virtual_network_name": "cicidproject-network"
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5b19de1f-fc9c-4141-842e-c374226c0ff0",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/virtualNetworks/cicidproject-network",
            "location": "northeurope",
            "name": "cicidproject-network",
            "resource_group_name": "adriano-christmann-rg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/adriano-christmann-rg/providers/Microsoft.Network/virtualNetworks/cicidproject-network/subnets/internal",
                "name": "internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    }
  ]
}